--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,26 @@
 body {
     font-family: "Roboto", sans-serif;
 }
+
+h1 {
+    color: #F9FAF8;
+    font-size: 48px;
+    font-weight: 900;
+}
+
+header,
+.splash {
+    background-color: #1F2937;
+}
+
+.splah p,
+.header-links a {
+    color: #E5E7EB;
+    font-size: 18px;
+    text-decoration: none;
+}
+
+.header-logo p {
+    color: #F9FAF8;
+    font-size: 24px;
+}
