--- a/css/style.css
+++ b/css/style.css
@@ -71,11 +71,11 @@ header,
     margin-top: 100px;
     align-items: center;
     justify-content: space-between;
+    gap: 50px;
 }
 
 .splash-text {
     display: flex;
-    width: 50%;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
@@ -84,6 +84,6 @@ header,
 
 .splash-image {
     display: flex;
+    flex-shrink: 2;
     justify-content: flex-end;
-    width: 40%;
 }
