--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,14 @@ button {
     border-radius: 10px;
 }
 
+h2 {
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: 900; 
+    margin-top: 40px;
+    margin-bottom: 50px;
+}
+
 .header-links ul {
     display: flex;
     list-style: none;
@@ -72,6 +80,7 @@ header,
     align-items: center;
     justify-content: space-between;
     gap: 50px;
+    padding-bottom: 30px;
 }
 
 .splash-text {
@@ -86,4 +95,41 @@ header,
     display: flex;
     flex-shrink: 2;
     justify-content: flex-end;
+}
+
+.info-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    background-color: white;
+    padding-bottom: 100px;
+}
+
+.info-blocks {
+    display: flex;
+    width: 80%;
+    justify-content: center;
+    gap: 60px;
+   
+}
+
+.info-block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    gap: 30px;
+}
+
+.info-image {
+    width: 300px;
+    box-shadow: 4px 4px 10px 2px rgba(1, 1, 19, 0.527);;
+}
+
+.subtext {
+    color: #878787;
+    font-size: 20px;
+    width: 260px;
+    text-align: center;
 }
