--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,18 @@ h2 {
     margin-bottom: 50px;
 }
 
+blockquote p {
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+}
+
+blockquote,
+.citation {
+    width: 50%;
+}
+
 .header-links ul {
     display: flex;
     list-style: none;
@@ -132,4 +144,22 @@ header,
     font-size: 20px;
     width: 260px;
     text-align: center;
+}
+
+.quote-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    gap: 30px;
+    background-color: #E5E7EB;
+    padding-top: 200px;
+    padding-bottom: 200px;
+}
+
+.citation {
+    font-size: 30px;
+    font-weight: 600;
+    align-self: flex-end;
 }
