--- a/css/style.css
+++ b/css/style.css
@@ -161,5 +161,46 @@ header,
 .citation {
     font-size: 30px;
     font-weight: 600;
-    align-self: flex-end;
+    text-align: right;
+}
+
+.CTA-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.CTA-block {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+    background-color: #3882F6;
+    border-radius: 10px;
+    padding: 50px 100px;
+}
+
+.CTA-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 10px;
+    color: white;
+}
+
+.CTA-header {
+    font-weight: 600;
+}
+
+.CTA-text p {
+    color: rgb(214, 214, 214);
+}
+
+.CTA-button button {
+    border: 2px solid white;
+    padding: 10px 30px;
 }
